# mk-cc-resources

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
plugins/plugin-toolkit/skills/code-glossary/: .gitignore  DECOUPLING-PROPAGATION-PLAN.md  DESIGN-V2.md  EXTENSIBILITY-MEASURE-DESIGN.md  SKILL.md  pyproject.toml
plugins/plugin-toolkit/skills/code-glossary/briefs/: behavioral-judge.md  block-scanner.md  cluster-reviewer.md  clusterer.md  indexer.md  labeler.md
plugins/plugin-toolkit/skills/code-glossary/code_glossary/: __init__.py  call_names.py  canonical_verbs.yaml  constants.py  coupling.py  diff.py  extensibility.py  io_yaml.py  map.py  records.py  runner.py  schema.py  vocab.py
plugins/plugin-toolkit/skills/code-glossary/templates/: glossary.schema.yaml  report.md.tmpl
plugins/plugin-toolkit/skills/code-glossary/tests/: dr_fixtures.py  sanity_check_vocab_vs_scalable_crowd.py  test_block_scanner.py  test_cluster_block_bucketing.py  test_cluster_bucketing.py  test_cluster_merge.py  test_cluster_near_misses.py  test_cluster_orchestrator.py  test_cluster_scoring.py  test_coupling.py  test_diff.py  test_dispatch_scanner.py  test_dr_detect_test_command.py  test_dr_loader.py  test_dr_preflight.py  test_dr_runner.py  test_dr_substrate.py  test_extensibility.py  test_indexer_dogfood.py  test_indexer_orchestrator.py  test_indexer_python.py  test_indexer_treesitter.py  test_indexer_walk.py  test_io_yaml.py  test_map.py  (+17 more)
skills/schema-scout/tool/: pyproject.toml
skills/schema-scout/tool/schema_scout/: __init__.py  cli.py  index_io.py  models.py
(+772 files in other folders)
