[project]
name = "code-glossary"
version = "2.2.0"
description = "Functionality glossary builder and DRY audit for any codebase. Polyglot via tree-sitter + LLM. Includes glossary drift diff and the /dry-refactor v3 MVP engine (preflight + dry-run, read-only)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "mkots" }]
readme = "DESIGN-V2.md"

dependencies = [
    "pyyaml>=6.0",
    "tree-sitter>=0.21",
    "tree-sitter-typescript>=0.21",
    "tree-sitter-c-sharp>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
# Wired in a later wave once the CLI lands.
# code-glossary = "code_glossary.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_glossary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
